--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>ㅤ</title>
   <script>
     function changeColor() {
       document.body.style.backgroundColor = 'white';
